clang/test/BSC/Negative/Trait/r2/kw_trait/kw_trait.cbs
// RUN: %clang_cc1 -verify %s

typedef int trait; // expected-error {{declaration of anonymous trait must be a definition}}
                   // expected-error@-1 {{invalid syntax, semi not expected after 'trait (null)'}}
                   // expected-warning@-2 {{typedef requires a name}}
trait x = 1;       // expected-error {{expected identifier or '('}}

?   // expected-error {{expected identifier or '('}}

int main() {
  return 0;
}